[package]
name = "rust-wiki"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
either = "1.13.0"
home = "0.5.9"
num-format = "0.4.4"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
similar = "2.6.0"
ureq = "2.10.1"

[dev-dependencies]
rand = "0.8.5"
