[package]
name = "rust-wiki"
version = "0.3.0"
edition = "2021"
description = "A project for parsing decrypted The Battle Cats game data for use on the wiki."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://docs.rs/cli-clipboard/0.4.0/cli_clipboard/

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
either = "1.13.0"
home = "0.5.9"
log = "0.4.24"
num-format = "0.4.4"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
similar = "2.6.0"
toml = "0.8.19"
ureq = "2.10.1"

[dev-dependencies]
rand = "0.8.5"
