[package]
name = "rust-wiki"
version = "0.4.3"
edition = "2021"
description = "A project for parsing decrypted The Battle Cats game data for use on the wiki."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://docs.rs/cli-clipboard/0.4.0/cli_clipboard/

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
either = "1.13.0"
home = "0.5.9"
log = { version = "0.4.24", features = ["serde"] }
num-format = "0.4.4"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.135"
similar = "2.6.0"
strum = { version = "0.27.1", features = ["derive"] }
toml = "0.8.19"
ureq = "2.10.1"

[dev-dependencies]
rand = "0.8.5"
